--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    margin: 0%;
+}
+
+.display {
+    display: flex;
+    padding: 150px;
+}
+
+.image-7 {
+    background-image: url(image/Frame\ 57.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+h1 {
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 800;
+}
+
+.sk {
+    color: orangered;
+}
+
+.ig {
+    width: 50%;
+    padding-left: 150px;
+}
+
+.ig img {
+    width: 90%;
+}
+
+.food {
+    text-decoration: none;
+    background-color: rgb(255, 170, 13);
+    padding: 10px 25px;
+    border-radius: 10px;
+    font-weight: 700;
+    color: black;
+
 }
